<resources>
    <string name="app_name">WearIt!</string>
    <string name="app_end_name">!</string>
    <string name="sub_title_for_app_name">find everything you wish for..</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="rights_names">All rights reserved to Anafa Hyams, Erez Mitelka, Naor Levi and Matan Frank</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_nickname">Nickname</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_forget_password">Forget Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password1">This field is necessary</string>
    <string name="error_invalid_password2">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="connect">Connect</string>

    <!-- Strings related to registration -->
    <string name="registration_form_title">Registration Form</string>
    <string name="first_name_header">First Name:</string>
    <string name="last_name_header">Last Name:</string>
    <string name="email_address_header">Email Address:</string>
    <string name="nickname_header">Nickname:</string>
    <string name="password_header">Password:</string>
    <string name="repeat_password_header">Repeat Password:</string>
    <string name="robot_header">I\'m not a robot</string>
    <string name="policies_header">I\'ve read the policies and I agree to the terms of use</string>
    <string name="title_activity_user_menu">Main Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Strings related to user menu -->
    <!--<string name="nav_header_title">Android Studio</string> -->
    <!--<string name="nav_header_subtitle">android.studio@android.com</string> -->
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logoff">Log off</string>
    <string name="action_switch_user">Switch User</string>
    <string name="action_send_email">Send Email</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="action_tools">Tools</string>
    <string name="action_show_history">History</string>
    <string name="action_open_gallery_and_search">Open Gallery and Search</string>
    <string name="action_import_and_search">Import and Search</string>
    <string name="search_by_text">Search by text</string>
    <string name="recommended_sub_title">Recommended</string>
    <string name="prompt_text_to_search">Insert your product name you want to search</string>
    <string name="search">Search</string>
    <string name="search_by_photo">Search by photo</string>
    <string name="search_by_photo_title">Search by photo</string>
    <string name="search_by_text_title">Search by text</string>
    <string name="login_title">login</string>
    <string name="upload_an_image">Upload an image</string>
    <string name="take_a_picture">Take a picture from camera</string>
    <string name="title_search_product">Search Product</string>
    <string name="about_title">about</string>
    <string name="about_app_details">We at WearIt! believes that everyone\'s shopping experience should be simple, fast, efficient and cost-effective.\nOur app allows you to search for clothing items by name or even a picture of the item that a friend sent to your phone or even by a photo that you take of someone clothes in the street.\nThe app searches the item on selected shopping sites throughout the Internet and returns the user the best results combined with several parameters: price, rating and maximum matching to the search request.\nAll this allows you to find the cheapest and most recommended item on the net!</string>
    <string name="about_close_sent_app_details">Hope you will enjoy doing shopping with us!</string>
    <string name="team_members_title">Team Members</string>
    <string name="history_title">History</string>

    <string name="action_change_password">Change Password</string>
    <string name="tools_title">Tools</string>
    <string name="change_password_title">Change Password</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="action_change_password_short">Change Password</string>
    <string name="developer_name_1">Anafa Hyams</string>
    <string name="developer_name_2">Erez Mitelka</string>
    <string name="developer_name_3">Naor Levi</string>
    <string name="developer_name_4">Matan Frank</string>
    <string name="register_button_name">REGISTER</string>

</resources>
