<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/coopbl"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/title_size"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/arblanca"
            android:gravity="center_horizontal"
            android:text="@string/sub_title_for_app_name"
            android:textSize="@dimen/sub_title_size"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/appTitle" />


        <ImageView
            android:id="@+id/imageViewForApp"
            android:layout_width="344dp"
            android:layout_height="177dp"
            android:layout_margin="50sp"
            app:layout_constraintTop_toBottomOf="@+id/subTitle"
            app:srcCompat="@drawable/wearitphoto" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal"
                android:hint="@string/sign_up"
                android:textStyle="bold"
                android:onClick="signUpButtonClickHandler"/>

            <Button
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal"
                android:hint="@string/connect"
                android:textStyle="bold"
                android:onClick="signInButtonClickHandler"/>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/rightsNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/bradhitc"
        android:gravity="center_horizontal"
        android:paddingBottom="0dp"
        android:paddingTop="30dp"
        android:text="@string/rights_names" />

</RelativeLayout>
