<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserMenuActivity"
    tools:showIn="@layout/app_bar_user_search_by_photo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchByPhotoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/brushsci"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:text="@string/search_by_photo_title"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/title_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/uploadImageCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_an_image"/>

                    <RadioButton
                        android:id="@+id/takePictureCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/take_a_picture"/>
                </RadioGroup>


            </LinearLayout>

            <ImageView
                android:id="@+id/dynamicPhotoImageView"
                android:layout_width="match_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:gravity="fill_vertical"
            android:hint="@string/search"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/ResultsListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

        </ListView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_weight="1"
                android:text="Clear"
                android:layout_centerHorizontal="true"
                android:onClick="onClearBtnClick"/>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>