<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserMenuActivity"
    tools:showIn="@layout/app_bar_user_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/messageDisplayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arblanca"
            android:text="Hello      !"
            android:paddingTop="10dp"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/searchByTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal"
                android:hint="@string/search_by_text"
                android:textStyle="bold"
                android:onClick="searchByTextButtonClickHandler"/>

            <Button
                android:id="@+id/searchByPhotoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal"
                android:hint="@string/search_by_photo"
                android:textStyle="bold"
                android:onClick="searchByPhotoButtonClickHandler"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:fontFamily="@font/arblanca"
            android:text="@string/recommended_sub_title"/>

        <GridView
            android:id="@+id/ResultsGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="3" >

        </GridView>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>